# graph-learning-for-source-code-analysis

./: .gitignore  .gitmodules  README.md
data-extraction/: README.md  data.json
data-extraction/annotator-app/: Cargo.toml  config.json  log.txt
data-extraction/annotator-app/src/: app.rs  config.rs  counter.rs  data.rs  editor.rs  main.rs  viewer.rs  widgets.rs
data-extraction/annotator-app/src/widgets/: events.rs  explorer.rs  text_input.rs
data-extraction/annotator-app/src/widgets/explorer/: input.rs  state.rs  ui.rs  widget.rs
data-extraction/annotator-app/src/widgets/explorer/input/: command.rs  crossterm.rs
data-extraction/annotator-app/src/widgets/text_input/: input.rs  state.rs  widget.rs
data-extraction/annotator-app/src/widgets/text_input/input/: command.rs  crossterm.rs
data-extraction/auxiliary/: misc-paper-data.json  scopus.csv
data-extraction/auxiliary/crossref_data/: 10.1002__cpe.5103  10.1002__spe.2893  10.1007__978-3-030-86890-1_14  10.1007__978-3-031-20309-1_15  10.1007__s10664-021-09968-2  10.1007__s11432-015-5426-3  10.1007__s11432-018-9821-9  10.1016__j.infsof.2018.10.001  10.1016__j.infsof.2021.106761  10.1016__j.ins.2020.11.053  (+33 more)
plotting/: data_loading.py  graph_key_overwrite.json  libedit.py  plot.sh  plot_paper.sh  plot_utils.py  plotting.py  requirements.txt  utils.py
study-selection/: README.md  clustering.py  final_papers.bib
study-selection/backward-snowballing/: build_round_1.py  round1.csv  round2.csv  round3.csv
study-selection/initial/: README.md  agreement.py  round1.csv  round2.csv  round3.csv
(+482 files in other folders)
